Included new endpoint deleteReports
